feat(models): support Muse Glimmer (#2366)
* Add muse glimmer!

* Roll back the dlfash

* Make reasoning better controlled

* Make reasoning better controlled

* Fixes
